# PyGenePlexus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.md  MANIFEST.in  README.md  change_backend_data_format.py  data_filenames.txt  example_run.py  example_run2.py  example_run_slurm.py  geneplexus.py  geneplexus2.py  generate_expected_test_result.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  utls.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
docs/: requirements.txt
docs/source/: appendix.rst  cli.rst  conf.py  custom.rst  download.rst  geneplexus.rst  glossary.rst  index.rst  util.rst
docs/source/appendix/: glossary.rst  license.rst  references.rst
docs/source/example/: example.rst
docs/source/geneplexus/: custom.rst  download.rst  geneplexus.rst  util.rst
docs/source/guidelines/: guidelines.rst
docs/source/methodsanddata/: gscs.rst  mlmodel.rst  networks.rst  posandneg.rst  representations.rst  similarities.rst
docs/source/notes/: api.rst  cli.rst  custom.rst  data.rst  faqs.rst  installation.rst  quickstart.rst  r.rst
docs/source/supp/: data.rst  example.rst  guidelines.rst  methods.rst
example/: example_download.py  example_run.py  input_genes.txt  test_download.py  test_download_slurm.py
geneplexus/: __init__.py  _geneplexus.py  cli.py  config.py  custom.py  download.py  exception.py  geneplexus.py  loader.py  util.py
geneplexus/_clustering/: __init__.py  domino.py  domino_utls.py  louvain.py
geneplexus/_config/: __init__.py  config.py  data_filenames.txt  logger_util.py
old_stuff/: example_run_old.py  example_run_slurm.py  my_new_html_file.html
old_stuff/static/: DOID-9562-STRING-Adjacency-DisGeNet-Symbols.txt  d3-tip.css  d3-v4-contextmenu.js  graph.css  graph.js
old_stuff/templates/: about.html  base.html  contact.html  googleanalytics.html  help.html  jobresults.html  navbar.html  result_base.html
src_backend/: Time_Memory_Benchmark.ipynb  geneplexus.py  input_genes.txt  slurm-time_mem_benchmark-8545698.out  slurm-time_mem_benchmark-8545721.out  slurm-time_mem_benchmark-8545731.out  time_mem_benchmark.sb  utls.py
src_hidden/: 01_add_pos_genes_to_weights.py  01_embeddings_to_matrix.py  01_generate_weights.py  01_generate_weights_combine.py  01_generate_weights_slurm.py  01_make_adjmat_influence.py  01_make_correction_matrices.py  01_make_correction_matrices.sb  01_process_GSCs.py  02_01a_process_BioGrid.py  02_01b_process_STRING.py  02_02a_embed_with_pecanpy.sb  02_02b_embeddings_to_matrix.py  02_03a_make_adjmat_influence.py  02_04a_read_obo.py  02_04b_format_doid_annotations.py  02_04c_propogate_doid.R  02_04d_process_GSCs.py  02_05a_generate_weights.py  02_05b_generate_weights_slurm.py  02_05c_generate_weights_combine.py  02_06a_make_correction_matrices.py  02_06b_make_correction_matrices.sb  slurm-embed-8128887.out  tmp_num_sets.py
static/: datatable.js  example-geneplexus-file.txt  index.js  main.css  validation.js
templates/: index.html  index.html.saved  jobs.html  results.html  validation.html
templates/redirects/: 500.html  500_unhandled.html
test/: conftest.py  custom_net.edg  custom_net_weighted.edg  test_cli.py  test_custom.py  test_download.py  test_geneplexus.py  test_pipeline.py  test_util.py
test/expected_result/: config.yaml  df_convert_out.tsv  df_convert_out_subset.tsv  df_edge.tsv  df_edge_sym.tsv  df_probs.tsv  df_sim.tsv  df_sim_Dis.tsv  df_sim_GO.tsv
test/expected_result/expected_cli/: df_convert_out.tsv  top_level_config.json
test/expected_result/expected_cli/All-Genes/: clf.joblib  df_convert_out_for_model.tsv  model_level_config.json
test/expected_result/expected_cli/All-Genes/Human-Combined/: df_edge.tsv  df_edge_sym.tsv  df_probs.tsv  df_sim.tsv
test/expected_result/expected_pipeline/: top_level_config.json
test/expected_result/expected_pipeline/All-Genes/: model_level_config.json
test/expected_result/expected_pipeline/All-Genes/Mouse-Combined/: df_edge.tsv  df_edge_sym.tsv  df_probs.tsv  df_sim.tsv
tmp/: geneplexus.py  utls.py
