[metadata]
name = geneplexus
version = 1.0.0-dev.2
description = Network based gene classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishnanlab/PyGenePlexus

# Authors
author = Remy Liu and Christopher A. Mancuso
author_email = liurenmi@msu.edu, mancus16@msu.edu

# License
license_files = file: LICENSE.md
license = Creative Commons License: Attribution-NonCommercial-ShareAlike 4.0 International

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    Network Biology
    Supervised Learning
    Gene Classification

[options]
install_requires =
    numpy >= 1.20.1
    scikit-learn >= 1.0.0
    scipy >= 1.6.2
    pandas >= 1.2.4
    requests
    tqdm
    pystow
    pyyaml

zip_save = false
include_package_data = true
python_requires = >=3.8

packages = find:

[options.entry_points]
console_scripts =
    geneplexus = geneplexus.cli:main

[options.extras_require]
dev =
    tox
    pytest
    pytest-cov
    pytest-order
    parameterized
