[metadata]
name = geneplexus
version = 1.0.0-dev.6
description = Network based gene classification
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/krishnanlab/PyGenePlexus
project_urls =
    Documentation = https://pygeneplexus.readthedocs.io

# Authors
author = Remy Liu and Christopher A. Mancuso
author_email = liurenmi@msu.edu, mancus16@msu.edu

# License
license_files = file: LICENSE.md
license = BSD 3-Clause License

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
keywords =
    Network Biology
    Supervised Learning
    Gene Classification

[options]
install_requires =
    numpy >= 1.20.1
    scikit-learn >= 1.0.0
    scipy >= 1.6.2
    pandas >= 1.2.4
    requests
    tqdm
    pystow
    pyyaml

zip_save = false
include_package_data = true
python_requires = >=3.6

packages = find:

[options.entry_points]
console_scripts =
    geneplexus = geneplexus.cli:main

[options.extras_require]
dev =
    parameterized
    pytest
    pytest-cov
    pytest-mock
    pytest-order
    requests-mock
    tox
