[metadata]
name = geneplexus
version = 2.0.4
description = Network based gene classification
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/krishnanlab/PyGenePlexus
project_urls =
    Documentation = https://pygeneplexus.readthedocs.io

# Authors
author = Remy Liu and Christopher A. Mancuso
author_email = renmingl@andrew.cmu.edu, CHRISTOPHER.A.MANCUSO@CUANSCHUTZ.EDU

# License
license_files = file: LICENSE.md
license = BSD 3-Clause License

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
keywords =
    Network Biology
    Supervised Learning
    Gene Classification

[options]
install_requires =
    numpy >= 1.20.1
    scikit-learn >= 1.0.0
    scipy >= 1.6.2
    pandas >= 1.2.4
    networkx >= 3.2
    statsmodels >= 0.14.0
	pcst-fast >= 1.0.7
    requests
    tqdm
    pystow
    pyyaml

zip_save = false
include_package_data = true
python_requires = >=3.10

packages = find:

[options.entry_points]
console_scripts =
    geneplexus = geneplexus.cli:main

[options.extras_require]
dev =
    parameterized
    pytest
    pytest-cov
    pytest-mock
    pytest-order
    requests-mock
    tox
